--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <a class="profile-link" href="https://www.facebook.com/">Facebook</a>
           <a class="profile-link" href="https://twitter.com/">Twitter</a>
           <a class="profile-link" href="https://github.com/">Github</a>
-          <a class="profile-link" href="mailto:rohit.vaswani85@gmail.com">contact@gmail.com</a>
+          <a class="profile-link" href="https://mail.google.com/mail/?view=cm&fs=1&to=rohit.vaswani85@gmail.com">contact@gmail.com</a>
         </p>
       </div>
     </div>
