--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
 	<title>RohitHood</title>
 	<link rel="stylesheet" href="css/style.css">
+	<meta name="viewport" content="width=device-width">
 </head>
-</head>
+
 
 <body>
 
@@ -31,7 +32,7 @@
 				<div id="companyInfo">
 					<img id="cpyPic"
 						src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Dunder_Mifflin%2C_Inc.svg/2560px-Dunder_Mifflin%2C_Inc.svg.png">
-					<p>Dunder Mifflin Paper Company, Inc. is a fictional paper sales company featured in the American
+					<p><b>Dunder Mifflin Paper Company, Inc.</b> is a fictional paper sales company featured in the American
 						television series The Office.The company was depicted as based in New York City, with branches
 						in smaller Northeastern cities. Episodes are set in the Scranton branch, but other branches have
 						been mentioned and seen.</p>
@@ -39,7 +40,7 @@
 
 				<div id="ceoInfo">
 					<img id="ceoPic" src="https://upload.wikimedia.org/wikipedia/en/d/dc/MichaelScott.png">
-					<p>Michael Gary Scott (born March 15, 1962, in Scranton, Pennsylvania), is a fictional character
+					<p><b>Michael Gary Scott</b> (born March 15, 1962, in Scranton, Pennsylvania), is a fictional character
 						played by Steve Carell, who is a former branch manager of the Scranton branch of Dunder Mifflin
 						Paper
 						Company, The Michael Scott Paper Company, and later Dunder Mifflin Sabre.</p>
@@ -49,7 +50,7 @@
 
 			<div class="flex-stock-container">
 
-				<h3>Place Stock Orders Below</h3>
+				<h3><u>Place Stock Orders Below</u></h3>
 
 				<h4 id="returnPct">Your Return in Percentage: 0.00%</h4>
 
@@ -105,8 +106,9 @@
 			crossorigin="anonymous"></script>
 
 		<!--js code for chart from canvas js-->
-		<script src="js/chart.js"></script>
 		<script src="js/order.js"></script>
+		<script src="js/chart.js"></script>
+
 
 </body>
 
