--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>RohitHood</title>
 	<link rel="stylesheet" href="css/style.css">
 	<meta name="viewport" content="width=device-width">
+	<meta meta name="keyword" content="rohit, portfolio, stocks, trading">
 </head>
 
 
